# optimal-qn

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  policy.json  pyproject.toml
OptimalNearTerm/: LICENSE  pyproject.toml
OptimalNearTerm/delftblue/: policy_iter_8links.sh  policy_iter_9links.sh
OptimalNearTerm/src/adaptivealgo/cli/: policy_iter.py  solve_basic.py
OptimalNearTerm/src/adaptivealgo/experiments/: experiment_basic_case.ipynb  experiment_expected_time.ipynb  experiment_heuristic_maxpi.ipynb  experiment_large_json.ipynb  experiment_policy_structure.ipynb  experiment_random_policy.ipynb
OptimalNearTerm/src/adaptivealgo/lib/: agent.py  env.py  util.py
OptimalNearTerm/tests/: test_agent.py  test_env.py  test_policy_iter.py  test_solve_basic.py
OptimalNearTermFastEngine/: CMakeLists.txt  Makefile  OptimalNearTerm
OptimalNearTermFastEngine/delftblue/: policy_iter_3links.sh  policy_iter_8links.sh  policy_iter_9links.sh
OptimalNearTermFastEngine/src/: cli.c  main.c
OptimalNearTermFastEngine/src/commands/: policy_iter.c  policy_iter.h
OptimalNearTermFastEngine/src/lib/: agent.c  agent.h  env.c  env.h  hashmap.h  utils.c  utils.h
delftblue/: policy_iter_10links.sh  policy_iter_5links.sh  policy_iter_6links.sh  policy_iter_7links.sh  policy_iter_8links.sh  policy_iter_9links.sh
src/: cli.c  cli.h
src/adaptivealgo/: __init__.py  agent.py  constants.py  env.py  policy_iter.py  simulate_policy.py  simulator.py  solve_basic.py  util.py
src/adaptivealgo/cli/: policy_iter.py  simulate_policy.py  solve_basic.py
src/adaptivealgo/experiments/: experiment_basic_case.ipynb  experiment_expected_time.ipynb  experiment_heuristic_maxpi.ipynb  experiment_policy_structure.ipynb  experiment_random_policy.ipynb  experiment_single_protocol.ipynb
src/adaptivealgo/lib/: env.py  simulator.py  state.py  util.py
src/commands/: policy_iter.c  policy_iter.h  simulate_policy.c  simulate_policy.h  solve_basic.c  solve_basic.h
src/lib/: agent.c  env.c  env.h  hashmap.c  json.c  json.h  utils.c  utils.h
tests/: test_agent.py  test_env.py  test_policy_iter.py  test_simulator.py  test_solve_basic.py  test_util.py
