[tool.poetry]
name = "adaptivealgo"
version = "0.1.0"
description = ""
authors = ["Boris Goranov <b.g.goranov@student.tudelft.nl>"]
readme = "README.md"
packages = [{include = "adaptivealgo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
policyIter = "adaptivealgo.policy_iter:main"
