[tool.poetry]
name = "adaptivealgo"
version = "0.1.0"
description = ""
authors = ["Boris Goranov <b.g.goranov@student.tudelft.nl>"]
readme = "README.md"
packages = [{include = "adaptivealgo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
argparse = "^1.4.0"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ipykernel = "^6.29.4"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v -s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
policyIter = "adaptivealgo.cli.policy_iter:main"
solveBasic = "adaptivealgo.cli.solve_basic:main"
simulate = "adaptivealgo.cli.simulate_policy:main"
